--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
-     <link rel="stylesheet" href="./css/main.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/main.min.css">
     <link rel="icon" href="./images/login.png" type="image/x-icon">
 </head>
 <body class="body">
     <div class="main-conteiner">
         <header class="header">
-            <div class="conteiner header-div">
-                <a class="link-header" href="./index.html" target="_self">Web<span class="logo">Studio</span></a>
-                <div class="container-menu">
-                    <button
-                      class="menu-toggle js-open-menu"
-                      aria-expanded="false"
-                      aria-controls="mobile-menu"
-                    >
-                    <svg width="24" height="16" viewBox="0 0 24 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path fill-rule="evenodd" clip-rule="evenodd" d="M0 2.66667V0H24V2.66667H0ZM0 9.33333H24V6.66667H0V9.33333ZM0 16H24V13.3333H0V16Z" fill="black" />
-                    </svg>
-                    </button>
-                </div>
+            <div class="conteiner header-div header-menu">
+                    <a class="link-header" href="./index.html" target="_self">Web<span class="logo">Studio</span></a>
+                    <div class="container-menu">
+                        <button
+                          class="menu-toggle js-open-menu"
+                          aria-expanded="false"
+                          aria-controls="mobile-menu"
+                        >
+                        <svg width="24" height="16" viewBox="0 0 24 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M0 2.66667V0H24V2.66667H0ZM0 9.33333H24V6.66667H0V9.33333ZM0 16H24V13.3333H0V16Z" fill="black" />
+                        </svg>
+                        </button>
+                    </div>
                 <nav class="nav">
                     <ul class="list-header list-header-nav">
                         <li class="list-header__item">
@@ -43,17 +44,17 @@
                 <ul class="list-header list-header-div">
                     <li class="list-header__item">
                         <a href="mailto:info@devstudio.com" class="link-list-item">
-                            <svg width="14" height="10" viewBox="0 0 14 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M12.6875 0H1.31251C0.588747 0 0 0.560711 0 1.25001V8.74999C0 9.43929 0.588747 10 1.31251 10H12.6875C13.4113 10 14 9.43929 14 8.74999V1.25001C14 0.560711 13.4113 0 12.6875 0ZM12.6875 0.833329C12.7469 0.833329 12.8035 0.845074 12.8552 0.865586L7 5.69865L1.14479 0.865586C1.19649 0.845102 1.25304 0.833329 1.31248 0.833329H12.6875ZM12.6875 9.16664H1.31251C1.07112 9.16664 0.874996 8.97989 0.874996 8.74997V1.74601L6.71331 6.56493C6.79578 6.63287 6.89789 6.66666 7 6.66666C7.10211 6.66666 7.20422 6.6329 7.28669 6.56493L13.125 1.74601V8.74999C13.125 8.97989 12.9289 9.16664 12.6875 9.16664Z" fill="#757575" />
-                              </svg>
+                            <svg width="14" height="10">
+                                <use href="./images/symboldefs.svg#header-1"></use>
+                            </svg>
                             info@devstudio.com
                         </a>
                     </li>
                     <li class="list-header__item">
                         <a href="tel:+380961111111" class="link-list-item">
-                            <svg width="10" height="14" viewBox="0 0 10 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M8.5 0H1.5C0.672848 0 0 0.588742 0 1.3125V12.6875C0 13.4113 0.672848 14 1.5 14H8.5C9.32715 14 10 13.4113 10 12.6875V1.3125C10 0.588742 9.32715 0 8.5 0ZM1.5 0.875H8.5C8.77588 0.875 9 1.07111 9 1.3125V10.5H1V1.3125C1 1.07111 1.22412 0.875 1.5 0.875ZM8.5 13.125H1.5C1.22412 13.125 1 12.9289 1 12.6875V11.375H9V12.6875C9 12.9289 8.77588 13.125 8.5 13.125Z" fill="#757575" />
-                              </svg>
+                            <svg width="10" height="14">
+                                <use href="./images/symboldefs.svg#header-2"></use>
+                            </svg>
                             +38 096 111 11 11
                         </a>
                     </li>
@@ -177,9 +178,9 @@
                                 <source 
                                     srcset="./images/igor-m-1x.png   1x,
                                             ./images/igor-m-2x.png    2x" 
-                                    media="(min-width: 480px)"
+                                    media="(min-width: 320px)"
                                 >
-                                 <img src="./images/igor-m-1x.png" alt="Ігор Димьяненко">
+                                <img src="./images/igor-m-1x.png" alt="Ігор Димьяненко">
                             </picture>
                             <p class="name">Ігор Дем'яненко</p>
                             <h3 class="profession">Product Designer</h3>
@@ -231,7 +232,7 @@
                                 <source 
                                     srcset="./images/olha-m-1x.png   1x,
                                             ./images/olha-m-2x.png    2x" 
-                                    media="(min-width: 480px)"
+                                    media="(min-width: 320px)"
                                 >
                                 <img src="./images/olha-m-1x.png" alt="Ольга Репіна">
                             </picture>
@@ -284,7 +285,7 @@
                                 <source 
                                     srcset="./images/micola-m-1x.png   1x,
                                             ./images/micola-m-2x.png    2x" 
-                                    media="(min-width: 480px)"
+                                    media="(min-width: 320px)"
                                 >
                                 <img src="./images/micola-m-1x.png" alt="Ігор Димьяненко">
                             </picture>
@@ -338,7 +339,7 @@
                                 <source 
                                     srcset="./images/mihailo-m-1x.png   1x,
                                             ./images/mihailo-m-2x.png    2x" 
-                                    media="(min-width: 480px)"
+                                    media="(min-width: 320px)"
                                 >
                                 <img src="./images/mihailo-m-1x.png" alt="Ігор Димьяненко">
                             </picture>
@@ -531,17 +532,24 @@
           <li class="mobile-menu__item"><a href="./" class="link">Контакти</a></li>
         </ul>
         <ul class="list-header-menu">
-            <li class="list-header__item">
-                <a href="tel:+380961111111" class="link-list-item">+38 096 111 11 11</a>
+            <li class="list-header__item-menu">
+                <a href="tel:+380961111111" class="link-list-item-menu">+38 096 111 11 11</a>
             </li>
-            <li class="list-header__item">
-                <a href="mailto:info@devstudio.com" class="link-list-item">info@devstudio.com</a>
+            <li class="list-header__item-menu">
+                <a href="mailto:info@devstudio.com" class="link-list-item-menu">info@devstudio.com</a>
             </li>
         </ul>
-      </div>
-  
-      <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js" integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA==" crossorigin="anonymous"></script>
-      <script defer src="./js/mobile-menu.js"></script>
+        <ul class="social-menu">
+            <li class="social-menu__item"><a href="./" class="social-link-menu">Instagram</a></li>
+            <li class="social-menu__item"><a href="./" class="social-link-menu">Twitter</a></li>
+            <li class="social-menu__item"><a href="./" class="social-link-menu">Facebook</a></li>
+            <li class="social-menu__item"><a href="./" class="social-link-menu">LinkedIn</a></li>
+        </ul>
+    </div>
+    <script defer src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js" integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA==" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
